tests/NormalTests/paczka1/small_fuzzy/91772558.err
Error in line 3: nO0Sh8P A882 32,7
Error in line 4: nO0Sh8P S966 91,2
Error in line 7: kwixeS S966 77,2
Error in line 11: kwixeS A882 5,3
